[Change] 詳細の店情報色変更

--- a/web_rails/myapp/app/assets/stylesheets/search.scss
+++ b/web_rails/myapp/app/assets/stylesheets/search.scss
@@ -103,10 +103,10 @@ input#product {
   border-color: whitesmoke;
 }
 
-tr.shop_ad {
-  background-color: khaki !important;
+tr.detail {
+  background-color:whitesmoke !important;
 }
 
 th#shop_banner {
-  background-color: cadetblue;
+  background-color: lightblue;
 }
