--- a/web_rails/myapp/app/views/search/search_result.html.erb
+++ b/web_rails/myapp/app/views/search/search_result.html.erb
@@ -27,9 +27,9 @@
             <% end %>
           </td>
           <td style="width: 3000px;margin-left: auto;">
+            <%= render partial: '/search/sponsor_icon',locals: {spot_id: data.id} %>
             <% title = '【'+data.product_name+'】'+data.spot_name%>
             <%= link_to title ,search_detail_path(spot_id: data.id), style: "font-size: 18px" %>
-            <d class="text-muted" style="font-size: 16px;">- <%= time_ago_in_words(data.updated_at) %>前</d>
             <p class="text-muted" style="font-size: 16px;"><%= data.details %></p><br>
             <%= render 'favorite/favorite' , detail: data%>
             <%= render 'rate/rate' , detail: data %>
