--- a/web_rails/myapp/app/views/search/_time_line.html.erb
+++ b/web_rails/myapp/app/views/search/_time_line.html.erb
@@ -13,6 +13,7 @@
       </td>
 
       <td style="width: 3000px;margin-left: auto;">
+        <%= render partial: '/search/sponsor_icon',locals: {spot_id: data.id} %>
         <%= link_to data.spot_name ,search_detail_path(spot_id: data.id), style: "font-size: 18px" %>
         <d class="text-muted" style="font-size: 16px;">- <%= time_ago_in_words(data.updated_at) %>前</d>
         <p class="text-muted" style="font-size: 16px;"><%= data.details %></p><br>
