--- a/web_rails/myapp/app/views/users/fav_show.html.erb
+++ b/web_rails/myapp/app/views/users/fav_show.html.erb
@@ -47,6 +47,7 @@
           </td>
           <td style="width: 3000px;margin-left: auto;">
             <div class="form-inline">
+              <%= render partial: '/search/sponsor_icon',locals: {spot_id: data.id} %>
               <%= data.spot_name %>
               <d class="text-muted" style="font-size: 14px;">- <%= time_ago_in_words(data.updated_at) %>前</d>
             </div>
