--- a/web_rails/myapp/app/views/users/edit.html.erb
+++ b/web_rails/myapp/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Profile Edit") %>
+<% provide(:title, "プロフィール編集") %>
 <h1>プロフィール編集</h1>
 
 <div class="row">
@@ -14,28 +14,28 @@
         　<% end %>
         </tr>
         <tr>
-          <th>Change Icon</th>
+          <th>アイコンを変更する</th>
           <td><%= f.file_field :image_name %></td>
         </tr>
         <tr>
-          <th>User Name</th>
+          <th>ユーザー名</th>
           <td><%= f.text_field :user_name, class: 'form-control' %></td>
         </tr>
         <tr>
-          <th>Mail Address</th>
+          <th>メールアドレス</th>
           <td><%= f.email_field :email, class: 'form-control' %></td>
         </tr>
         <tr>
-          <th>Password</th>
+          <th>パスワード</th>
           <td><%= f.password_field :password, class: 'form-control' %></td>
         </tr>
         <tr>
-          <th>Re-entry</th>
+          <th>再入力</th>
           <td><%= f.password_field :password_confirmation, class: 'form-control' %><td>
         </tr>
       </table>
 
-      <%= f.submit :"Update", class: "btn btn-primary" %>
+      <%= f.submit :"更新する", class: "btn btn-primary" %>
     <% end %>
 
   </div>
