[Change] プロフィール画像バグ修正

--- a/web_rails/myapp/app/views/users/edit.html.erb
+++ b/web_rails/myapp/app/views/users/edit.html.erb
@@ -10,7 +10,7 @@
       <table class="table">
         <tr>
           <% if @user.image_name? %>
-            <%= image_tag @user.image_name.thumb.url %>
+            <%= image_tag @user.image_name.url %>
         　<% end %>
         </tr>
         <tr>
