--- a/web_rails/myapp/app/views/planning/show.html.erb
+++ b/web_rails/myapp/app/views/planning/show.html.erb
@@ -1,36 +1,33 @@
 <% provide(:title, '計画表一覧') %>
   <h1>聖地巡礼スケジュール表一覧</h1>
-      <div class="table-responsive">
-        <% @plan = Plan.where(user_id: session[:user_id]) %>
-        <table class="table table-striped table-bordered">
-          <thead>
-            <tr>
-              <th class="col-sm-6">聖地巡礼スケジュール表名</th>
-              <th class="col-sm-3">作成日</th>
-              <th class="col-sm-2">ダウンロード・削除</th>
-            </tr>
-          </thead>
-          <tbody>
-          <% @plan.each do |pa| %>
-          <tr>
-            <td>
+<div class="box">
+  <div class="container">
+    <div class="row">
+      <% @plan = Plan.where(user_id: session[:user_id]).order("created_at desc") %>  
+      <% @plan.each do |pa| %>
+			<div id="plan_div" class="col-xs-12">
+				<div class="box-part text-center">         
+					<div class="title">
+						<h3>
+              <i class="glyphicon glyphicon-list-alt"></i>
               <%= link_to plan_detail_path(plan_id: pa.id) do %>
                 <%= pa.plan_name %>
               <% end %>
-            </td>
-            <td>
-              <%= pa.created_at.strftime("%Y年%m月%d日 %H時%M分") %>
-            </td>
-            <td>
-              <%= link_to plan_detail_path(format: :pdf, plan_id: pa.id) , class:"btn btn-link btn-lg" do %>
-                <i class="glyphicon glyphicon-save"></i>
-              <% end %>
-              <%= link_to plan_destroy_path(id: pa.id), method: :delete , class:"btn btn-link btn-lg" do %>
-                <i class="glyphicon glyphicon-trash"></i>
-              <% end %>
-            </td>
-          </tr>
+            </h3>
+            <d class="text-muted" style="font-size: 14px;">- <%= pa.created_at.strftime("%Y年%m月%d日 %H時%M分") %></d>
+					</div>
+					<div class="text">
+						<span><%= pa.plan_detail %></span>
+					</div>      
+					<%= link_to plan_detail_path(format: :pdf, plan_id: pa.id) , class:"btn btn-link btn-lg" do %>
+                <i class="glyphicon glyphicon-save">PDF</i>
           <% end %>
-          </tbody>
-        </table>
-      </div>
+          <%= link_to plan_destroy_path(id: pa.id), method: :delete , class:"btn btn-link btn-lg" do %>
+              <i class="glyphicon glyphicon-trash">削除</i>
+          <% end %>
+				</div>
+			</div>
+      <% end %>	 
+	  </div>		
+  </div>
+</div>
