--- a/web_rails/myapp/app/views/offer/confirm.html.erb
+++ b/web_rails/myapp/app/views/offer/confirm.html.erb
@@ -1,7 +1,9 @@
 <div class="page-header">
   <h1>お問い合わせ</h1>
 </div>
- 
+<h2>
+  こちらの内容で問い合わせますか？
+</h2>
 <%= form_for @offer, :url => offer_complete_path do |f| %>
   <table class="table">
     <tr>
