--- a/web_rails/myapp/app/views/offer/index.html.erb
+++ b/web_rails/myapp/app/views/offer/index.html.erb
@@ -6,15 +6,15 @@
   <table class="table">
     <tr>
       <th>企業名<span class="text-danger">（必須）</span></th>
-      <td><%= f.text_field :name %></td>
+      <td><%= f.text_field :name , class: "form-control" %></td>
     </tr>
     <tr>
       <th>メールアドレス<span class="text-danger">（必須）</span></th>
-      <td><%= f.text_field :email %></td>
+      <td><%= f.text_field :email , class: "form-control" %></td>
     </tr>
     <tr>
       <th>お問い合わせ内容<span class="text-danger">（必須）</span></th>
-      <td><%= f.text_area :message %></td>
+      <td><%= f.text_area :message , class: "form-control" %></td>
     </tr>
   </table>
   <%= f.submit '確認', class: 'btn btn-primary' %>
