--- a/web_rails/myapp/app/views/users/show.html.erb
+++ b/web_rails/myapp/app/views/users/show.html.erb
@@ -54,7 +54,7 @@
                   <%= render partial: '/search/sponsor_icon',locals: {spot_id: data.id} %>
                   <%= link_to data.spot_name ,search_detail_path(spot_id: data.id) %>
                   <d class="text-muted" style="font-size: 14px;">- <%= time_ago_in_words(data.updated_at) %>前</d>
-                  <p class="text-muted" style="font-size: 14px;"><%= data.details %></p><br>
+                  <p class="text-muted" style="font-size: 14px;"><%= limit_str_detail(data.details) %></p><br>
                   <%= render 'favorite/favorite' , detail: data%>
                   <%= render 'rate/rate' , detail: data %>
                 </td>
