--- a/web_rails/myapp/app/views/layouts/_footer.html.erb
+++ b/web_rails/myapp/app/views/layouts/_footer.html.erb
@@ -4,8 +4,8 @@
 <div class="container-fluid">
     <nav class="text-center">
       <%= link_to "企業向け申し込みフォーム", offer_path %>&nbsp;&nbsp;
-      <%= link_to "About",'#' %>&nbsp;&nbsp;
-      <%= link_to "利用規約",'#' %>
+      <%= link_to "About", about_path %>&nbsp;&nbsp;
+      <%= link_to "利用規約", riyoukiyaku_path %>
     </nav>
     <center>
     <%= link_to image_tag("icon/さくれアイコン3.png", :size => "50x50"), root_path %>
