--- a/web_rails/myapp/app/views/static_pages/about.html.erb
+++ b/web_rails/myapp/app/views/static_pages/about.html.erb
@@ -1,5 +1,11 @@
 <% provide(:title, "About") %>
 <h1>About</h1>
-<p>
-  当サイトは聖地巡礼サイトです。
-</p>
+<h2>
+サイト概要
+</h2>
+<li>当サイトはアニメや小説等様々なジャンルの舞台となった場所(聖地)を登録、検索することができるサイトです。</li>
+<li>利用者が行きたいと思った聖地をピックアップして聖地巡礼表を作成することも可能です。</li>
+<br>
+<br>
+<br>
+<li>当サイトの聖地データは利用者の皆様が登録して頂いたものを使用しております</li>
