--- a/web_rails/myapp/app/views/static_pages/riyoukiyaku.html.erb
+++ b/web_rails/myapp/app/views/static_pages/riyoukiyaku.html.erb
@@ -1,9 +1,7 @@
 <% provide(:title, "利用規約") %>
-<div id="wrapContents">
-<div class="wrapKOPIPE">
-<div class="wrapHINAGATA">
 <h1>利用規約</h1>
-<p>この利用規約（以下，「本規約」といいます。）は，＿＿＿＿＿（以下，「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。</p>
+<p>この利用規約（以下，「本規約」といいます。）は，神戸電子専門学校Hグループ（以下，「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。</p>
+
 
 <h2>第1条（適用）</h2>
 <ol>
@@ -11,6 +9,7 @@
 <li>当社は本サービスに関し，本規約のほか，ご利用にあたってのルール等，各種の定め（以下，「個別規定」といいます。）をすることがあります。これら個別規定はその名称のいかんに関わらず，本規約の一部を構成するものとします。</li>
 <li>本規約の規定が前条の個別規定の規定と矛盾する場合には，個別規定において特段の定めなき限り，個別規定の規定が優先されるものとします。</li>
 </ol>
+
 
 <h2>第2条（利用登録）</h2>
 <ol>
@@ -23,6 +22,7 @@
 </ol></li>
 </ol>
 
+
 <h2>第3条（ユーザーIDおよびパスワードの管理）</h2>
 <ol>
 <li>ユーザーは，自己の責任において，本サービスのユーザーIDおよびパスワードを適切に管理するものとします。</li>
@@ -30,11 +30,13 @@
 <li>ユーザーID及びパスワードが第三者によって使用されたことによって生じた損害は，当社に故意又は重大な過失がある場合を除き，当社は一切の責任を負わないものとします。</li>
 </ol>
 
+
 <h2>第4条（利用料金および支払方法）</h2>
 <ol>
 <li>ユーザーは，本サービスの有料部分の対価として，当社が別途定め，本ウェブサイトに表示する利用料金を，当社が指定する方法により支払うものとします。</li>
 <li>ユーザーが利用料金の支払を遅滞した場合には，ユーザーは年14．6％の割合による遅延損害金を支払うものとします。</li>
 </ol>
+
 
 <h2>第5条（禁止事項）</h2>
 <p>ユーザーは，本サービスの利用にあたり，以下の行為をしてはなりません。</p>
@@ -57,6 +59,7 @@
 <li>その他，当社が不適切と判断する行為</li>
 </ol>
 
+
 <h2>第6条（本サービスの提供の停止等）</h2>
 <ol>
 <li>当社は，以下のいずれかの事由があると判断した場合，ユーザーに事前に通知することなく本サービスの全部または一部の提供を停止または中断することができるものとします。
@@ -68,6 +71,7 @@
 </ol></li>
 <li>当社は，本サービスの提供の停止または中断により，ユーザーまたは第三者が被ったいかなる不利益または損害についても，一切の責任を負わないものとします。</li>
 </ol>
+
 
 <h2>第7条（利用制限および登録抹消）</h2>
 <ol>
@@ -83,6 +87,7 @@
 <li>当社は，本条に基づき当社が行った行為によりユーザーに生じた損害について，一切の責任を負いません。</li>
 </ol>
 
+
 <h2>第8条（退会）</h2>
 <p>ユーザーは，当社の定める退会手続により，本サービスから退会できるものとします。</p>
 
@@ -94,20 +99,26 @@
 <li>当社は，本サービスに関して，ユーザーと他のユーザーまたは第三者との間において生じた取引，連絡または紛争等について一切責任を負いません。</li>
 </ol>
 
+
 <h2>第10条（サービス内容の変更等）</h2>
 <p>当社は，ユーザーに通知することなく，本サービスの内容を変更しまたは本サービスの提供を中止することができるものとし，これによってユーザーに生じた損害について一切の責任を負いません。</p>
+
 
 <h2>第11条（利用規約の変更）</h2>
 <p>当社は，必要と判断した場合には，ユーザーに通知することなくいつでも本規約を変更することができるものとします。なお，本規約の変更後，本サービスの利用を開始した場合には，当該ユーザーは変更後の規約に同意したものとみなします。</p>
 
+
 <h2>第12条（個人情報の取扱い）</h2>
 <p>当社は，本サービスの利用によって取得する個人情報については，当社「プライバシーポリシー」に従い適切に取り扱うものとします。</p>
+
 
 <h2>第13条（通知または連絡）</h2>
 <p>ユーザーと当社との間の通知または連絡は，当社の定める方法によって行うものとします。当社は,ユーザーから,当社が別途定める方式に従った変更届け出がない限り,現在登録されている連絡先が有効なものとみなして当該連絡先へ通知または連絡を行い,これらは,発信時にユーザーへ到達したものとみなします。</p>
 
+
 <h2>第14条（権利義務の譲渡の禁止）</h2>
 <p>ユーザーは，当社の書面による事前の承諾なく，利用契約上の地位または本規約に基づく権利もしくは義務を第三者に譲渡し，または担保に供することはできません。</p>
+
 
 <h2>第15条（準拠法・裁判管轄）</h2>
 <ol>
@@ -115,12 +126,6 @@
 <li>本サービスに関して紛争が生じた場合には，当社の本店所在地を管轄する裁判所を専属的合意管轄とします。</li>
 </ol>
 
+
 <p class="tR">以上</p>
 
-
-</div><!--／wrapHINAGATA-->
-</div><!--／wrapKOPIPE-->
-
-
-<!-- InstanceEndEditable -->
-</div><!--／wrapContents-->
