--- a/web_rails/myapp/app/views/planning/plan_pdf.html.erb
+++ b/web_rails/myapp/app/views/planning/plan_pdf.html.erb
@@ -7,6 +7,12 @@
         <span><%= d.date.strftime("%Y/%m/%d") %></span>
         <span><%= d.date.strftime("%H:%M") %></span>
       </time>
+      <div class="cbp_tmicon">
+        <% @s = Spot.find_by(spot_name: d.spot_name) %>
+        <% if @s %>
+          <%= image_tag(@s.images[0].url, class: "img-thumbnail", size: 100) if @s.images? %>
+        <% end %>
+      </div>
       <div class="cbp_tmlabel">
         <h2 style="text-align:center">
           <%= d.spot_name %>
