[Change] 複数のデザイン変更

--- a/web_rails/myapp/app/assets/stylesheets/rate.scss
+++ b/web_rails/myapp/app/assets/stylesheets/rate.scss
@@ -22,7 +22,7 @@
 .btn-tertiary.disabled:focus, .btn-tertiary[disabled]:focus, fieldset[disabled] .btn-tertiary:focus,
 .btn-tertiary.disabled.focus, .btn-tertiary[disabled].focus, fieldset[disabled] .btn-tertiary.focus {
     color: white;
-    background-color: hotpink;
+    background-color: rgb(241, 187, 214);//rgb(241, 187, 214);
     border-color: whitesmoke;
 }
 
