--- a/web_rails/myapp/app/views/search/_sponsor_icon.html.erb
+++ b/web_rails/myapp/app/views/search/_sponsor_icon.html.erb
@@ -1,3 +1,3 @@
 <% if is_sponsored?(spot_id) %>
-  <span title="近くにオススメのお店があります" class='glyphicon glyphicon-user' style="color: green;"></span>
+  <span title="近くにオススメのお店があります" class='glyphicon glyphicon-home' style="color: red; font-size: 20px"></span>
 <% end %>
