--- a/web_rails/myapp/app/views/favorite/_favorite.html.erb
+++ b/web_rails/myapp/app/views/favorite/_favorite.html.erb
@@ -1,6 +1,6 @@
 <% if current_user %>
     <div class="fav-link" id="fav-link-<%= detail.id %>">
-    <% if !Favorite.exists?(user_id:current_user.id,spot_id:detail.id) %>
+    <% if !is_favorite_exist?(current_user.id, detail.id) %>
         <%= link_to fav_path(detail.id) , method: :post , class:"btn btn-tertiary addlist" , remote: true do %>
             <i class="glyphicon glyphicon-star-empty" title="リストに追加"></i>
              リストに追加
