--- a/web_rails/myapp/app/views/rate/_rate.html.erb
+++ b/web_rails/myapp/app/views/rate/_rate.html.erb
@@ -1,6 +1,6 @@
 <% if current_user %>
 <div class="like-link" id="like-link-<%= detail.id %>">
-    <% if is_rate_exist?(current_user.id,detail.id) %>
+    <% unless is_rate_exist?(current_user.id,detail.id) %>
         <%= link_to rate_path(spot_id:detail.id) , method: :post , class:"btn btn-tertiary" , remote: true do %>
             <i class="glyphicon glyphicon-heart-empty" title="いいねをつける"></i>
             いいね
