[Chnage] 画像拡大できるように

--- a/web_rails/myapp/app/views/comment/_comment.html.erb
+++ b/web_rails/myapp/app/views/comment/_comment.html.erb
@@ -5,7 +5,7 @@
           <% unless comment.images %>
           <% else %>
             <% comment.images.each do |image| %>
-              <%= image_tag( "/uploads/comment/#{image}" , :size => "80x80" , :class => "rounded-circle") %>
+              <%= link_to image_tag("/uploads/comment/#{image}", size:80), "/uploads/comment/#{image}", :'data-lightbox' => "/uploads/comment/#{image}" %>
             <% end %>
           <% end %>
         </td>
