[Change] 公開非公開ボタンの文字位置矯正

--- a/web_rails/myapp/app/assets/stylesheets/spot.scss
+++ b/web_rails/myapp/app/assets/stylesheets/spot.scss
@@ -38,12 +38,14 @@ textarea#spot_details {
 }
 
 label#show.btn.btn-default {
+  text-align: center !important;
   color: white;
   background-color: seagreen;
 }
 
 
 label#hide.btn.btn-default {
+  text-align: center !important;
   color: white;
   background-color: brown;
 }
