--- a/web_rails/myapp/app/views/spot/edit.html.erb
+++ b/web_rails/myapp/app/views/spot/edit.html.erb
@@ -58,10 +58,10 @@
 
       <div class="btn-group" data-toggle="buttons">
         <label id="show" class="btn btn-default">
-          公開<%= f.radio_button :review_flag, true, checked: false %>
+          &nbsp;&nbsp;公開<%= f.radio_button :review_flag, true, checked: false %>
         </label>
         <label id="hide" class="btn btn-default">
-          下書き<%= f.radio_button :review_flag, false, checked: false %>
+          &nbsp;&nbsp;下書き<%= f.radio_button :review_flag, false, checked: false %>
         </label>
       </div>
 
