--- a/web_rails/myapp/app/views/planning/plan_detail.html.erb
+++ b/web_rails/myapp/app/views/planning/plan_detail.html.erb
@@ -9,15 +9,15 @@
         <span><%= d.date.strftime("%H:%M") %></span>
       </time>
       <div class="cbp_tmicon">
-        <% @s = Spot.find_by(spot_name: d.spot_name) %>
-        <% if @s %>
-          <%= image_tag(@s.images[0].url, class: "img-thumbnail", size: 100) if @s.images? %>
-        <% end %>
       </div>
       <div class="cbp_tmlabel">
         <h2 style="color: #fff">
           <%= d.spot_name %>
         </h2>
+        <% @s = Spot.find_by(spot_name: d.spot_name) %>
+        <% if @s %>
+          <%= image_tag(@s.images[0].url, size: 100) if @s.images? %>
+        <% end %>
         <%= @s.prefecture.name + " " + @s.address_city + " " + @s.address_street + " " + @s.address_building %><br>
         <% if !d.comment.empty? %>
           <p style="color: #fff">
