--- a/web_rails/myapp/app/views/planning/plan_detail.html.erb
+++ b/web_rails/myapp/app/views/planning/plan_detail.html.erb
@@ -14,8 +14,7 @@
         <h2 style="color: #fff">
           <%= d.spot_name %>
         </h2>
-        <% @s = Spot.find_by(spot_name: d.spot_name) %>
-        <% if @s %>
+        <% if @s = Spot.find_by(spot_name: d.spot_name) %>
           <%= image_tag(@s.images[0].url, size: 100) if @s.images? %>
         <% end %>
         <%= @s.prefecture.name + " " + @s.address_city + " " + @s.address_street + " " + @s.address_building %><br>
@@ -24,6 +23,32 @@
             <%= d.comment %>
           </p>
         <% end %>
+        <br>
+        <% if @shops = Shop.where(spot_id: @s.id) %>
+          <table class="table">
+          <% @shops.each do |shop| %>
+            <tr>
+              <th colspan="3" scope="row" class="text-center">
+                <%= shop.shop_name %>
+              </th>
+            </tr>
+            <tr>
+              <td>
+                <% if shop.images? %>
+                  <%= image_tag(shop.images.url, size: 100) %>
+                <% else %>
+                  <%= image_tag("icon/NoImage.png", size: 100) %>
+                <% end %>
+              </td>
+              <td>
+                <%= shop.address %><br>
+                <p style="font-size: 12px"><%= shop.detail %></p>
+              </td>
+            </tr>
+          <% end %>
+          </table>
+        <% end %>
+      
       </div>
     <% end %>
   </li>
