--- a/web_rails/myapp/app/assets/stylesheets/planning.scss
+++ b/web_rails/myapp/app/assets/stylesheets/planning.scss
@@ -203,12 +203,12 @@
 	}	
 }
 
-
+/*
 #date select {
 	width: 15% !important;
 	display: inline-block !important;
 }
-
+*/
 /*-----------------------------------------
 	show.html
 */
