--- a/web_rails/myapp/app/views/users/show.html.erb
+++ b/web_rails/myapp/app/views/users/show.html.erb
@@ -1,5 +1,9 @@
 <% provide(:title, @user.user_name) %>
-<h1>プロフィール</h1>
+<% if session[:user_id] == @user.id %>
+<h1>登録した聖地一覧</h1>
+<% else %>
+<h1><%= @user.user_name %>さんの登録した聖地一覧</h1>
+<% end %>
 <div class="row">
   <aside>
     <section class="user_info">
